# my-website

./: Cargo.toml
site/: blog.html  projects.html  sidebar.html
site/blog/: index.html
site/blog/posts/: 8
site/blog/posts/intro/: icon.html
site/home/: index.html
site/projects/TavernBot/: icon.html
site/projects/listings/MTGJSON/: about.html  icon.html
site/projects/listings/Quartz/: about.html  icon.html
site/projects/listings/SquireBot/: about.html  icon.html
site/projects/listings/TavernBot/: about.html  icon.html
site/static/: bio.html  first.html  index.html
src/: bio.rs  blog.rs  home.rs  main.rs  projects.rs  statics.rs  utils.rs
templates/: base.html.tera  index.html.tera  sidebar.html.tera  style.html.tera
templates/blog/: base.html.tera
templates/projects/: index.html.tera
